--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook": "storybook dev -p 6006 --no-open",
+    "build-storybook": "storybook build",
+    "test": "vitest --run",
+    "test:ui": "vitest --ui --open false"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -43,6 +45,7 @@
     "eslint-plugin-storybook": "^9.1.2",
     "playwright": "^1.54.2",
     "prettier": "^3.6.2",
+    "vite-tsconfig-paths": "^5.1.2",
     "storybook": "^9.1.2",
     "typescript": "^5",
     "vitest": "^3.2.4"
