--- a/.dockerignore
+++ b/.dockerignore
@@ -1,29 +1,21 @@
-# Dependencies
 node_modules
-
-# Build output
 .next
-out
-
-# Debug / logs
+.git
+.gitignore
+README.md
+Dockerfile
+docker-compose.yml
+.dockerignore
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-
-# Local env
-.env*
-!.env.example
-
-# VCS
-.git
-.gitignore
-
-# Editor
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+*.tsbuildinfo
 .vscode
 .idea
-
-# OS
-.DS_Store
-
-/src/stories
+test-data
+coverage
