--- a/package.json
+++ b/package.json
@@ -12,17 +12,30 @@
     "storybook": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build",
     "test": "vitest --run",
-    "test:ui": "vitest --ui --open false"
+    "test:ui": "vitest --ui --open false",
+    "init-csv": "node scripts/init-csv-data.js"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.1",
+    "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "7.3.1",
     "@mui/material": "7.3.1",
     "@mui/material-nextjs": "7.3.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/multer": "^2.0.0",
+    "@types/uuid": "^10.0.0",
+    "csv-parser": "^3.2.0",
+    "csv-stringify": "^6.6.0",
+    "fs-extra": "^11.3.1",
+    "multer": "^2.0.2",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
@@ -45,9 +58,9 @@
     "eslint-plugin-storybook": "^9.1.2",
     "playwright": "^1.54.2",
     "prettier": "^3.6.2",
-    "vite-tsconfig-paths": "^5.1.2",
     "storybook": "^9.1.2",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^3.2.4"
   }
 }
