--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/uuid": "^10.0.0",
     "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
+    "framer-motion": "^12.23.12",
     "fs-extra": "^11.3.1",
     "multer": "^2.0.2",
     "next": "15.4.6",
